# hello-desktop

./: .gitignore  .traceability.yaml  AGENTS.md  LICENSE  README.md  README.standalone.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-registry.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  traceability.yml
electron/: main.mjs  preload.cjs
src/: electron-chrome.css  electron-chrome.ts  hello.test.ts  main.ts  style.css  tauri-atlas-shell.ts  traceability-audit-fixtures.test.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  second-window.json
src-tauri/icons/: icon.icns
src/apps/: bootstrapHelloDesktop.ts
src/atoms/: secondWindow.ts
src/frames/: createSecondWindowHost.ts
src/molecules/: buildSecondWindowLaunchSpec.ts  detectDesktopRuntime.ts  guessNodeStylePlatform.ts  raiseDesktopPopoutWindow.test.ts  raiseDesktopPopoutWindow.ts  secondWindowMode.ts
src/plugs/browser/: createBrowserSecondWindowHost.ts
src/plugs/tauri/: createTauriSecondWindowHost.ts  installTauriAtlasShell.ts
src/recipes/: openOrFocusSecondWindow.test.ts  openOrFocusSecondWindow.ts
src/sockets/: atlasShell.ts  desktopPopoutWindow.ts  secondWindowHost.ts  secondWindowLaunchSpec.ts
src/views/: electronChrome.ts  helloMainCard.ts
