[package]
name = "hello-desktop-tauri"
version = "0.1.0"
description = "Tauri shell for hello-desktop (Vite dist shared with Electron)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

# Dev: dependencies at opt-level 1, own code at 0 (faster incremental builds).
[profile.dev.package."*"]
opt-level = 1

# Release: size-oriented defaults for shipped desktop binaries.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

# CI variant: same guarantees, faster linker pass (~10 min faster on windows-latest).
# Use via: tauri build --profile release-ci
[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 4
